--- a/ELE.web/WebRoot/WEB-INF/reports/plantilla_CO_FT_174.jrxml
+++ b/ELE.web/WebRoot/WEB-INF/reports/plantilla_CO_FT_174.jrxml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="plantilla_CO_FT_174" language="groovy" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20">
-	<property name="ireport.zoom" value="3.7974983358324463"/>
-	<property name="ireport.x" value="710"/>
-	<property name="ireport.y" value="747"/>
+	<property name="ireport.zoom" value="1.771561000000017"/>
+	<property name="ireport.x" value="0"/>
+	<property name="ireport.y" value="0"/>
 	<parameter name="zona" class="java.lang.String"/>
 	<parameter name="plancha" class="java.lang.String"/>
 	<parameter name="nombre" class="java.lang.String"/>
@@ -28,8 +28,8 @@
 				<reportElement x="-19" y="-19" width="594" height="88" forecolor="#009232" backcolor="#009232"/>
 			</rectangle>
 			<staticText>
-				<reportElement x="186" y="11" width="166" height="22" forecolor="#FFFFFF"/>
-				<textElement>
+				<reportElement x="173" y="11" width="231" height="22" forecolor="#FFFFFF"/>
+				<textElement textAlignment="Center">
 					<font size="15" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Elección de Delegados]]></text>
@@ -283,12 +283,12 @@
 				<text><![CDATA[Tribunal de Elecciones y Escrutinios]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="449" y="37" width="104" height="15"/>
-				<textElement/>
+				<reportElement x="425" y="37" width="128" height="15"/>
+				<textElement textAlignment="Right"/>
 				<text><![CDATA[Mod. Septiembre 2021]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="2" y="35" width="100" height="17"/>
+				<reportElement x="2" y="35" width="116" height="17"/>
 				<textElement verticalAlignment="Middle"/>
 				<textFieldExpression class="java.lang.String"><![CDATA[$P{nombreReporte}]]></textFieldExpression>
 			</textField>
