--- a/ELE.web/WebRoot/gui/inicioAdm.jspx
+++ b/ELE.web/WebRoot/gui/inicioAdm.jspx
@@ -11,7 +11,7 @@
 			doctypeSystem="http://www.w3.org/TR/html4/loose.dtd" />
 		<html>
 			<head>
-				<title>Administraci&#243;n de Planchas e inhabilidad de Asociados - Inicio de Sesion de Usuarios</title>
+				<title>Administraci&#243;n de Planchas e inhabilidad de Asociados - Inicio de Sesi&#243;n de Usuarios</title>
 				<link rel="stylesheet" type="text/css"
 					href="./estilos/rime/rime-portlet.css" />
 				<link rel="stylesheet" type="text/css"
